# AggreGatorRMC

./: .gitignore  BatteryPercentage.txt  CommandStart.sh  CommandStart.sh~  ODroidStart.sh  ODroidStart.sh~  README.md  README.md~  ROS_WS.gitignore  client.cpp  randomfile  rosAuto.launch  rosMultiCommand.launch  rosMultiOdroid.launch  rosSingleOdroid.launch  rosTestI2C.launch  rosTestLidar.launch  server.cpp  startAutonomy.launch  startDefault.launch  startI2C.launch  startRC.launch
AggreGator_ws/: .gitignore  PowerUsageLog.txt  README.md  start_test_mode.sh~
AggreGator_ws/src/camera_feedback/: CMakeLists.txt  package.xml
AggreGator_ws/src/camera_feedback/include/camera_feedback/: camera_feedback.h
AggreGator_ws/src/camera_feedback/src/: README.TXT  camera_feedback.cpp  camera_feedback_node.cpp
AggreGator_ws/src/i2c/: CMakeLists.txt  package.xml
AggreGator_ws/src/i2c/include/i2c/: ina226.c  ina226.h
AggreGator_ws/src/i2c/msg/: I2CMSG.msg
AggreGator_ws/src/i2c/src/: i2c_node.cpp  i2c_node.cpp~  i2c_pub.cpp
AggreGator_ws/src/ir_processing/: CMakeLists.txt
AggreGator_ws/src/ir_processing/src/: ir_processing_node.cpp
AggreGator_ws/src/ladar/: CMakeLists.txt  CMakeLists.txt~  package.xml
AggreGator_ws/src/ladar/include/ladar/: draw.h  ladar.h  ladar_data.h  localization.h
AggreGator_ws/src/ladar/msg/: ladar.msg  ladar_data.msg  processed_data.msg
AggreGator_ws/src/ladar/src/: conversions.cpp  interpretLadar.cpp  interpret_ladar.cpp  ladar.cpp  ladarPrintMap.cpp  ladarPrintRange.cpp  ladarRange.cpp  ladarVisualData.cpp  ladar_node.cpp  localization.cpp  test_publishers.cpp
AggreGator_ws/src/ladar/src/v1/: draw.cpp  interpretLadar.cpp  interpret_ladar.cpp  ladarPrintMap.cpp  ladarPrintRange.cpp  ladarRange.cpp  ladar_node.cpp  localization.cpp  test_publishers.cpp
AggreGator_ws/src/mission_control/: CMakeLists.txt  README.md  package.xml
AggreGator_ws/src/mission_control/include/mission_control/: autonomy.h  base_mid_handler.h  ladar_handler.h  mission_control.cpp  mission_control.h  state_handler.h
AggreGator_ws/src/mission_control/include/mission_control/behaviors/: avoid_walls_behavior.cpp  avoid_walls_behavior.h  base_behavior.h  behavior_map.h  behavior_move.cpp  behavior_move.h  behaviors.cpp  behaviors.h  dump_behavior.h  mine_behavior.h  motor_utility.cpp  motor_utility.h
AggreGator_ws/src/mission_control/include/mission_control/stateMachine/: state_machine.cpp  state_machine.h
AggreGator_ws/src/mission_control/src/: autonomy_node.cpp  mission_control.cpp  mission_control_node.cpp  state_handler.cpp
AggreGator_ws/src/mission_control/src/mid_level/: base_mid_handler.cpp  ladar_handler.cpp
AggreGator_ws/src/remote_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
AggreGator_ws/src/remote_control/msg/: Motor.msg  WheelMotor.msg  motorMSG.msg~  motors.msg
AggreGator_ws/src/remote_control/src/: xbox_controller_node.cpp  xbox_controller_node.cpp~
ControllInterface/: CommandStruct.h  ControllerInterface.cpp  ControllerInterface.h  InputDevice.h  OperationModeEnum.h  XBoxController.cpp  XBoxController.h  main.cpp  stdafx.cpp
Getting_Started/: README.md
NASAboticsControllInterface/: CommandHolder.cpp  CommandHolder.h  GR_Logo.qrc  InputDevice.h  InputDeviceEnum.h  XBoxController.cpp  XBoxController.h  main.cpp  nasaboticscontrolinterface.cpp  nasaboticscontrolinterface.h  nasaboticscontrolinterface.qrc  nasaboticscontrolinterface.ui
NASAboticsControllInterface_linux/: CommandHolder.cpp  CommandHolder.h  InputDevice.h  InputDeviceEnum.h  NASAboticsControlInterface.cpp  NASAboticsControlInterface.h  NASAboticsControlInterface.pro  OperationModeEnum.h  XBoxController.cpp  XBoxController.h  nasaboticscontrolinterface.ui
Old Code/: README.md
OpenCV/: README.txt
Web/: README.md
WifiCom/: MORE ABOUT SOCKETS.rtf
common_files/: CMakeLists.txt  package.xml
common_msgs/: CMakeLists.txt  package.xml
filter/: CMakeLists.txt  OldCMakeLists.txt  package.xml
hardware_interface/: CMakeLists.txt  package.xml
hardware_interface/include/hardware_interface/: AdaFruit.cpp  AdaFruit.h  GPIO.h  i2c.cpp  i2c.h  ina226.cpp  ina226.h
hardware_interface/src/: adafruit_node.cpp  adc_node.cpp  ina226_node.cpp  test_node.cpp
ir_processing/: CMakeLists.txt  package.xml
ladar/: CMakeLists.txt  CMakeLists.txt~  package.xml
ladar/include/ladar/: conversions.h  draw.h  localization.h
ladar/src/: conversions.cpp  ladarRIData.cpp  ladar_node.cpp
lidar/: CMakeLists.txt  Protocl7BeaconLaunch.sh  Protocol7NetbookRviz.sh  beacon.launch  package.xml
lidar/src/: pcl_segmentation_node.cpp  test_lidar_node.cpp
mega_motor/: mega_motor.ino
mission_control/: CMakeLists.txt  README.md  package.xml
mission_control/include/mission_control/: mission_control.cpp  mission_control.h
mission_control/include/mission_control/behaviors/: behavior_map.h  behaviors.h  motor_utility.cpp  motor_utility.h  navigation_behavior.cpp  navigation_behavior.h  orientation_behavior.cpp  orientation_behavior.h  seek_target_behavior.cpp  seek_target_behavior.h
mission_control/include/mission_control/stateMachine/: state_machine.cpp  state_machine.h
mission_control/include/mission_control/stateMachines/: state_dump.cpp  state_dump.h  state_machine.cpp  state_machine.h  state_mine.cpp  state_mine.h  state_navigation.cpp  state_navigation.h  state_orientation.cpp  state_orientation.h  state_orientation_prime.cpp  state_orientation_prime.h  state_start.cpp  state_start.h
mission_control/src/: mission_control_node.cpp
motor_controller/: CMakeLists.txt  package.xml
motor_controller/include/: controller.cpp  controller.h  matrix.cpp
motor_controller/src/: bucket_motor_node.cpp  linear_actuator_node.cpp  motor_node.cpp  talker.cpp  test.cpp
new_lidar/: CMakeLists.txt  Protocl7BeaconLaunch.sh  beacon.launch  package.xml
power_monitoring/: CMakeLists.txt  package.xml
remote_control/: CMakeLists.txt  package.xml
remote_control/src/: xbox_controller_node.cpp
sensors/: CMakeLists.txt  package.xml
teensy_motor/: teensy_motor.ino
(+273 files in other folders)
