<?xml version="1.0"?>
<package>
  <name>remote_control</name>
  <version>0.1.0</version>
  <description>The package for handling input from the XBox controller. Writes to the motor_controller topics.</description>

  <maintainer email="joey@todo.todo">Joey S.</maintainer>

  <license>TODO</license>

  <author email="fnivek@gmail.com">Kevin French</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>common_files</build_depend>
  <run_depend>common_files</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
