<?xml version="1.0"?>
<package>
  <name>remote_control</name>
  <version>0.0.0</version>
  <description>The remote_control package</description>

  <maintainer email="fnivek@gmail.com">fnivek</maintainer>


  <license>TODO</license>


  <author email="fnivek@gmail.com">Kevin French</author>


  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
